--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <div id="map" class="mapelement">
     </div>
-    <script>
-        var map = L.map('map', { center: [40, -75.155399], zoom: 11 });
+    <script src="map.js"></script>
+    <!-- var map = L.map('map', { center: [40, -75.155399], zoom: 11 });
         L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', { attribution: '© OpenStreetMap' }).addTo(map);
         map.doubleClickZoom.disable();
         L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', { attribution: '© OpenStreetMap' }).addTo(map);
@@ -218,7 +218,7 @@
 
         // Add Legend to Map
         legend.addTo(map);
-    </script>
+    </script> -->
 </body>
 
 </html>
