--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <!-- Our web map and content will go here -->
     <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="map.js"></script>
-    <div id="map" class="mapelement">
+
+    <div id="map" class="mapelement"><script src="map.js"></script>
     </div>
 
     <!-- var map = L.map('map', { center: [40, -75.155399], zoom: 11 });
