--- a/index.html
+++ b/index.html
@@ -81,8 +81,6 @@
 
         var map = L.map('map', { center: [40, -75.155399], zoom: 11 });
         L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', { attribution: '© OpenStreetMap' }).addTo(map);
-        map.doubleClickZoom.disable();
-        L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', { attribution: '© OpenStreetMap' }).addTo(map);
 
         var mbAttr = 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
             'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
@@ -129,7 +127,7 @@
 */
         // load GeoJSON from an external file
         var neighborhoodsLayer = null;
-        $.getJSON("data/blood_lead.geojson", function (data) {
+        $.getJSON("blood_lead.geojson", function (data) {
             // add GeoJSON layer to the map once the file is loaded
             neighborhoodsLayer = L.geoJson(data, {
                 style: styleFunc,
