--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
+        mapboxgl.accessToken = 'pk.eyJ1Ijoiam11cmIiLCJhIjoiY2xvaDg0NHh1MGR6bTJ0czJodmNhMWoxNCJ9.FuXTCdTbyHhX8sDG2_O5FA';
 
 
         var map = L.map('map', { center: [40, -75.155399], zoom: 11 });
@@ -87,7 +88,7 @@
             mbUrl = 'https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1Ijoiam11cmIiLCJhIjoiY2xvN3NjejA2MDh4eTJqbzQ1cXBkNDZ0YSJ9.W_dT9rsFynqxwENCyvFWqA';
 
         var grayscale = L.tileLayer(mbUrl, { id: 'mapbox/light-v9', tileSize: 512, zoomOffset: -1, attribution: mbAttr }),
-            streets = L.tileLayer(mbUrl, { id: 'mapbox/streets-v11', tileSize: 512, zoomOffset: -1, attribution: mbAttr });
+            streets = L.tileLayer(mbUrl, { id: 'mapbox/streets-v12', tileSize: 512, zoomOffset: -1, attribution: mbAttr });
 
         var baseMaps = {
             "grayscale": grayscale,
